# ktreesitter-graphql

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties
.github/workflows/: build-c-lib.yaml
convention-plugins/src/main/kotlin/: sunnychung.publication.gradle.kts
tree-sitter-graphql/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-graphql/bindings/go/: binding_test.go
tree-sitter-graphql/bindings/python/tests/: test_binding.py
tree-sitter-graphql/bindings/python/tree_sitter_graphql/: __init__.py
tree-sitter-graphql/bindings/rust/: lib.rs
tree-sitter-graphql/bindings/swift/TreeSitterGraphqlTests/: TreeSitterGraphqlTests.swift
